Change compilation config: target lang version (it compiles, for me)